# android-sample-curl

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/consciousapps/cmakecurltest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Apis.h  native-lib.cpp  network-service.h
app/src/main/java/com/consciousapps/cmakecurltest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/consciousapps/cmakecurltest/: ExampleUnitTest.java
distribution/include/curl/x86/: curlbuild.h
distribution/lib/armeabi/: libcurl.la
distribution/lib/x86/: libcurl.la
gradle/wrapper/: gradle-wrapper.properties
